# bab-ai

./: .gitignore  README.md  main.py  pipeline.py  utils.py
config/: .env.example  Procfile  pyproject.toml
llm_app/: llm_utils.py  system_prompts.py
pinecone_app/: query_pinecone_index.py  setup_pinecone.py
rag_scripts/: embed_passages_hf.py  extract_clean_text.py  extract_text.py  query_pinecone_index.py  setup_pinecone.py
tests/: test_llm_utils.py  test_pipeline.py  test_twilio.py
