[tool.poetry]
name = "llama-hackathon"
version = "0.1.0"
description = "Using LLama to provide easier access to pension services in Bulgarian"
authors = ["Tetiana Bas"]
readme = "README.md"
packages = [
    { include = "llm_app" },
    { include = "rag_scripts" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.0"
loguru = "^0.7.2"
seaborn = "^0.13.2"
datasets = "^3.0.2"
sentence-transformers = "^3.2.1"
together = "^1.3.3"
python-dotenv = "^1.0.1"
pymupdf = "^1.24.13"
nltk = "^3.9.1"
requests = "^2.32.3"
pinecone = "^5.3.1"
twilio = "^9.3.6"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"
python-multipart = "^0.0.17"
ngrok = "^1.4.0"
torch = "2.0.1"
transformers = "^4.46.2"
bs4 = "^0.0.2"
[tool.poetry.dev-dependencies]
pytest = "^7.2.0"  
black = "^23.3b0"  
flake8 = "^6.0.0" 
isort = "^5.12.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
exclude = ["venv", ".git", "__pycache__", "build", "dist"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]